# doc-ultra

./: .gitignore  CLAUDE.md  doc-ultra.config.yaml  pyproject.toml  技术规范文档编制常见错误与防范清单.md  需求.md
.qoder/skills/doc-ultra/: SKILL.md  evals.md  presets.md  reference.md
.qoder/skills/doc-ultra/assets/: output-template.md
.qoder/skills/doc-ultra/memory/: pipeline-log.md
.qoder/skills/doc-ultra/reference/doc_ultra/: __init__.py  cli.py
.qoder/skills/doc-ultra/reference/doc_ultra/agents/: __init__.py
.qoder/skills/doc-ultra/reference/doc_ultra/preview/: __init__.py  renderer.py  server.py  snapshot.py  watcher.py
.qoder/skills/doc-ultra/reference/doc_ultra/prompts/: checker.md  expander.md  optimizer_radical.md  polisher.md
.qoder/skills/doc-ultra/reference/doc_ultra/providers/: base.py  openai.py
.qoder/skills/kf-skill-design-expert/: README.md  SKILL.md
.qoder/skills/kf-skill-design-expert/references/: file-engineering-spec.md  five-patterns-detail.md  harness-engineering-audit.md
doc_ultra/: cli.py  config.py  pipeline.py
doc_ultra/agents/: checker.py  expander.py  fuser.py  optimizer.py  parser.py  polisher.py
doc_ultra/prompts/: fuser.md  optimizer_balanced.md  optimizer_conservative.md  optimizer_cost_effective.md  parser.md
doc_ultra/providers/: __init__.py  anthropic.py  deepseek.py
