[project]
name = "doc-ultra-cli"
version = "0.1.0"
description = "文档超融合处理工具 CLI - 多视角并行优化 + 串行拷问检查流水线"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "rich>=13.0",
]

[project.scripts]
doc-ultra = "doc_ultra.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".qoder/skills/doc-ultra/reference"]
include = ["doc_ultra*"]
